return back my old laptop configuration

--- a/thesis/styles/esi_memoire.sty
+++ b/thesis/styles/esi_memoire.sty
@@ -6,7 +6,7 @@
 %\usepackage{setspace}
 \usepackage{fontspec}
 %\usepackage[RTLdocument]{bidi}
-
+\usepackage{bidi}
 \usepackage{polyglossia}
 \usepackage{color}
 
@@ -15,21 +15,12 @@
 \makeglossary
 %%%%%%%%%%%%%%%%%%%% glossary -> end
 
-\usepackage{titlesec}
-
-%captions
-%\setlength{\intextsep}{0cm plus1cm minus1cm}
-\usepackage[font={small}]{caption}
-
 %%%%%%%%%%%%%%%%%%%% Draw box -> begin
 \usepackage{tikz}
-\newcommand\arbox[2][]{\tikz[overlay]\node[fill=blue!10,inner sep=1pt, anchor=text, rectangle, rounded corners=1mm,#1] {\begin{Arabic}#2  \end{Arabic}};\phantom{#2 }}
+\newcommand\arbox[2][]{\tikz[overlay]\node[fill=blue!10,inner sep=1pt, anchor=text, rectangle, rounded corners=1mm,#1] {\begin{Arabic}#2  \end{Arabic}};\phantom{\begin{Arabic}#2 \end{Arabic}}}
 \newcommand\enbox[2][]{\tikz[overlay]\node[fill=blue!10,inner sep=2pt, anchor=text, rectangle, rounded corners=1mm,#1] {#2};\phantom{#2}}
 %%%%%%%%%%%%%%%%%%%% Draw box -> end
 
-
-
-\usepackage{bidi}
 
 
 \def\BSML{\begin{center}\char"FB51 \char"FB52 \char"FB53\end{center}}
@@ -39,6 +30,8 @@
 \chead{\footnotesize\it}
 \cfoot{}
 
+
+\selectbackgroundlanguage{french}
 
 \setmainlanguage{english}
 \setotherlanguage[numerals=maghrib]{arabic}
@@ -60,7 +53,7 @@
 \renewcommand{\epigraphwidth}{300pt}
 \usepackage{graphicx} %resize tables
 \usepackage{hyperref}
-
+\usepackage{titlesec}
 \usepackage{lastpage}
 %for better resolution 
 
@@ -194,13 +187,12 @@
 %[\vspace{1ex}%
 %]
 
-
+%captions
+%\setlength{\intextsep}{0cm plus1cm minus1cm}
+\usepackage[font={small}]{caption}
 
 %\newcommand{\notocsection}[1]{% 
     %\refstepcounter{chapter}% 
  %   \chapter*{\thechapter \quad #1}}% 
-
-
-
 
 
