--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -32,7 +32,7 @@ endnotes
 \font_tt_scale 100
 
 \graphics default
-\default_output_format default
+\default_output_format pdf4
 \output_sync 0
 \bibtex_command default
 \index_command default
@@ -14594,7 +14594,7 @@ checked by WayBackMachine
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -14995,10 +14995,6 @@ Preview of Quranologie (quranologie.com)
 
 \end_inset
 
-
-\end_layout
-
-\begin_layout Plain Layout
 
 \end_layout
 
